added ability to add code wherever clicked

--- a/editor.html
+++ b/editor.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>HTML Editor</title>
-      
+      <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
+    <h4 id="instructions">Enter the desired code into the box below and click inject</h4>
     <textarea id="editor_box" placeholder="Add HTML here"></textarea>
     <button id="inject_html_code">Inject</button>
   
