completed the first version of extension

--- a/editor.html
+++ b/editor.html
@@ -7,7 +7,7 @@
   <body>
     <h4 id="instructions">Enter the desired code into the box below and click inject</h4>
     <textarea id="editor_box" placeholder="Add HTML here"></textarea>
-    <button id="inject_html_code">Inject</button>
+      <center><button class="btn" id="inject_html_code">Inject</button></center>
   
     
     
